--- a/index.html
+++ b/index.html
@@ -526,6 +526,7 @@
         </div>
       </div>
      </footer>
+
      <div class="backdrop is-hidden" data-modal>
       <div class="modal"  >
       <div>
@@ -544,7 +545,7 @@
         <label class="form__label" for="contact-name" >Имя</label>
           <div class="form__item">
             <input type="text" id="contact-name" class="form__input" 
-            placeholder=" " name="contact-name">
+             name="contact-name">
             <svg class="form__svg" width="18" height="18">
               <use href="./images/icons.svg#icon-name"></use>
             </svg>
@@ -553,7 +554,7 @@
         <label class="form__label" for="contact-tel" >Телефон</label>
           <div class="form__item">
             <input type="text" id="contact-tel" class="form__input" 
-            placeholder=" " name="contact-tel">
+             name="contact-tel">
             <svg class="form__svg" width="18" height="18">
               <use href="./images/icons.svg#icon-tel"></use>
             </svg>
@@ -562,7 +563,7 @@
         <label class="form__label" for="contact-email" >Почта</label>
           <div class="form__item">
             <input type="text" id="contact-email" class="form__input" 
-            placeholder=" " name="contact-email">
+             name="contact-email">
             <svg class="form__svg" width="18" height="18">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
@@ -572,8 +573,10 @@
        <textarea class="form__input form__textarea" name="form-comment" 
        id="form-textarea" placeholder="Введите текст"></textarea>                    
              
-       <label class="checkbox" for="form-policy" >Соглашаюсь с рассылкой и принимаю 
+       <label class="checkbox" for="form-policy" >
+         <span>Соглашаюсь с рассылкой и принимаю 
               <a href="" class="checkbox__label">Условия договора</a>
+            </span>
          
               <input class="checkbox__input" id="form-policy" type="checkbox" name=" checkbox ">
           <svg class="checkbox__svg" width="16" height="15">
