--- a/portfolio.html
+++ b/portfolio.html
@@ -114,13 +114,13 @@
                   <div class="project__box">
                    <picture>
                     <source srcset="./images/desctop/project1-1200.jpg 1x, ./images/desctop/project1-1200@2x.jpg 2x" 
-                    media="(min-wigth:1200px")
+                    media="(min-wigth:1200px)"
                     type="image/jpeg">
                     <source srcset="./images/tablet/project1-768.jpg 1x, ./images/tablet/project1-768@2x.jpg 2x" 
-                    media="(min-wigth:768px")
+                    media="(min-wigth:768px)"
                     type="image/jpeg">
                     <source srcset="./images/mobile/project1-480.jpg 1x, ./images/mobile/project1-480@2x.jpg 2x" 
-                    media="(max-wigth:767px")
+                    media="(max-wigth:767px)"
                     type="image/jpeg">
                     <img  src="./images/mobile/project1-480.jpg" alt="Постер New Orlean vs Golden Star"
                     width="370"/>
@@ -145,13 +145,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project2-1200.jpg 1x, ./images/desctop/project2-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project2-768.jpg 1x, ./images/tablet/project2-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project2-480.jpg 1x, ./images/mobile/project2-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img  src="./images/mobile/project2-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -175,13 +175,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project3-1200.jpg 1x, ./images/desctop/project3-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project3-768.jpg 1x, ./images/tablet/project3-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project3-480.jpg 1x, ./images/mobile/project3-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img  src="./images/mobile/project3-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -205,13 +205,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project4-1200.jpg 1x, ./images/desctop/project4-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project4-768.jpg 1x, ./images/tablet/project4-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project4-480.jpg 1x, ./images/mobile/project4-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img  src="./images/mobile/project4-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -235,13 +235,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project5-1200.jpg 1x, ./images/desctop/project5-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project5-768.jpg 1x, ./images/tablet/project5-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project5-480.jpg 1x, ./images/mobile/project5-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img src="./images/mobile/project5-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -265,13 +265,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project6-1200.jpg 1x, ./images/desctop/project6-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project6-768.jpg 1x, ./images/tablet/project6-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project6-480.jpg 1x, ./images/mobile/project6-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img  src="./images/mobile/project6-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -295,13 +295,13 @@
                   <div class="project__box">
                    <picture>
                      <source srcset="./images/desctop/project7-1200.jpg 1x, ./images/desctop/project7-1200@2x.jpg 2x" 
-                     media="(min-wigth:1200px")
+                     media="(min-wigth:1200px)"
                      type="image/jpeg">
                      <source srcset="./images/tablet/project7-768.jpg 1x, ./images/tablet/project7-768@2x.jpg 2x" 
-                     media="(min-wigth:768px")
+                     media="(min-wigth:768px)"
                      type="image/jpeg">
                      <source srcset="./images/mobile/project7-480.jpg 1x, ./images/mobile/project7-480@2x.jpg 2x" 
-                     media="(max-wigth:767px")
+                     media="(max-wigth:767px)"
                      type="image/jpeg">
                      <img  src="./images/mobile/project7-480.jpg" alt="Постер New Orlean vs Golden Star"
                      width="370"/>
@@ -325,13 +325,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project8-1200.jpg 1x, ./images/desctop/project8-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project8-768.jpg 1x, ./images/tablet/project8-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project8-480.jpg 1x, ./images/mobile/project8-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img src="./images/mobile/project8-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -354,13 +354,13 @@
                   <div class="project__box">
                     <picture>
                       <source srcset="./images/desctop/project9-1200.jpg 1x, ./images/desctop/project9-1200@2x.jpg 2x" 
-                      media="(min-wigth:1200px")
+                      media="(min-wigth:1200px)"
                       type="image/jpeg">
                       <source srcset="./images/tablet/project9-788.jpg 1x, ./images/tablet/project9-768@2x.jpg 2x" 
-                      media="(min-wigth:768px")
+                      media="(min-wigth:768px)"
                       type="image/jpeg">
                       <source srcset="./images/mobile/project9-480.jpg 1x, ./images/mobile/project9-480@2x.jpg 2x" 
-                      media="(max-wigth:767px")
+                      media="(max-wigth:767px)"
                       type="image/jpeg">
                       <img src="./images/mobile/project9-480.jpg" alt="Постер New Orlean vs Golden Star"
                       width="370"/>
@@ -451,7 +451,6 @@
                    </form>
                  </div>
               </div>
-            </div>
            </footer>
       <script src="./js/mobile-menu.js"></script>
 </body>
